<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:screenOrientation="landscape"
    android:background="@drawable/bgmain1"
    tools:context=".MenuPrincipal">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/ic_launcher"
            android:id="@+id/imageView" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="40dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:id="@+id/textView4" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:src="@drawable/kinder1922"
            android:background="@drawable/transparente"
            android:id="@+id/imb_menuPrin_kinder" />

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:background="@drawable/transparente"
            android:src="@drawable/primaria192"
            android:id="@+id/imb_menuPrin_Elemet" />

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:background="@drawable/transparente"
            android:src="@drawable/schoolbag192"
            android:id="@+id/imb_menuPrin_exer" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="40dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/MenPrin_1"
            android:id="@+id/textView"
            android:textColor="@android:color/white"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="30dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/MenPrin_2"
            android:textColor="@android:color/white"
            android:id="@+id/textView2" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="30dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/white"
            android:text="@string/MenPrin_3"
            android:id="@+id/textView3" />
    </TableRow>
</TableLayout>
