<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgmain1"
    android:orientation="horizontal"
    android:screenOrientation="landscape"
    tools:context="com.belu.aneasywaytolearnenglish.Menu_Kindergarden">

           <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".5">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/back"
                android:background="@drawable/transparente"
                android:id="@+id/img_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="40dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/MenKind_tvinstrucciones"
                android:textColor="@android:color/white"
                android:id="@+id/textView4" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ImageButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:src="@drawable/colors192"
                android:background="@drawable/transparente"
                android:id="@+id/imb_menuKind_color" />

            <ImageButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:background="@drawable/transparente"
                android:src="@drawable/numbers192"
                android:id="@+id/imb_menuKind_num" />

            <ImageButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:background="@drawable/transparente"
                android:src="@drawable/letters192"
                android:id="@+id/imb_menuKind_letra" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginLeft="40dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/MenKind_color"
                android:id="@+id/textView"
                android:textColor="@android:color/white"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="30dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/MenKind_num"
                android:textColor="@android:color/white"
                android:id="@+id/textView2" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="30dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/white"
                android:text="@string/MenKind_letras"
                android:id="@+id/textView3" />
        </TableRow>

</TableLayout>
