<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:screenOrientation="landscape"
    android:layout_height="match_parent"
    android:background="@drawable/bgmain1">

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:background="@drawable/transparente"
            android:src="@drawable/back"
            android:id="@+id/imb_back_dialo_kind" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@android:color/white"
            android:layout_margin="10dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/Dialog_tilte"
            android:id="@+id/Dialog_Tittle"
            android:layout_gravity="center"
            android:gravity="center_vertical|center_horizontal"
            android:layout_marginBottom="5dp" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:src="@drawable/read"
            android:background="@drawable/transparente"
            android:id="@+id/Dialog_imb_Read" />

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:background="@drawable/transparente"
            android:src="@drawable/exercise"
            android:id="@+id/Dialog_imb_Exercise" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="20dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/Dialog_Read"
            android:textColor="@android:color/white"
            android:id="@+id/textView6" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="20dp"
            android:textColor="@android:color/white"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/Dialog_Exercise"
            android:id="@+id/textView7" />
    </TableRow>

</TableLayout>